attempted fix for background image not showing on heroku app

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     width:100%;
-    background-image: url("https://images.unsplash.com/photo-1573067485648-4cb2618b5e09?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2134&q=80");
+    background-image: url("https://images.unsplash.com/photo-1573067485648-4cb2618b5e09?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80");
     display: flex;
     min-height: 100vh;
     flex-direction: column;
